otherHelperCode/nohup.out
python3: can't open file 'restart.py': [Errno 2] No such file or directory
  File "restart_synonym.py", line 14
    os.system("python3 synonym_api.py"))
                                       ^
SyntaxError: invalid syntax
